connected to Azure, added Pokemon rankings component, minor logic functions

--- a/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -38,6 +38,14 @@
             <a class="nav-link text-dark" [routerLink]="['/Users']"
               >Users</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/PokemonRankings']"
+              >PokemonRankings</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/Login']"
+              >Login</a>
+          </li>
         </ul>
       </div>
     </div>
