added name property to PokemonDetails model in Angular; now able to display pokemon name in front end

--- a/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
@@ -3,6 +3,7 @@
 <div *ngFor="let ranking of pokemonRankings">
     <p>User: {{ranking.user}}</p>
     <p>Ranking: {{ranking.userRank}}</p>
+    <p>Pokemon Name: {{ranking.name}}</p>
     <p>PokemonID: {{ranking.pokemonApiId}}</p>
     <p>Criteria: {{ranking.criteria}}</p>
 </div>
