--- a/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
@@ -4,7 +4,7 @@
     <p>User: {{ranking.user}}</p>
     <p>Ranking: {{ranking.userRank}}</p>
     <p>Pokemon Name: {{ranking.name}}</p>
-    <p>PokemonID: {{ranking.pokemonApiId}}</p>
+    <p>PokemonID: {{ranking.pokemonApiid}}</p>
     <p>Criteria: {{ranking.criteria}}</p>
 </div>
 
@@ -20,7 +20,7 @@
 
 <div *ngFor="let ranking of pokemonRankingsByCurrentUser">
     <p>Ranking: {{ranking.userRank}}</p>
-    <p>PokemonID: {{ranking.pokemonApiId}}</p>
+    <p>PokemonID: {{ranking.pokemonApiid}}</p>
     <p>Criteria: {{ranking.criteria}}</p>
 </div>
 
@@ -56,7 +56,7 @@
 
 <div *ngFor="let ranking of pokemonRankingsByType">
     <p>Ranking: {{ranking.userRank}}</p>
-    <p>PokemonID: {{ranking.pokemonApiId}}</p>
+    <p>PokemonID: {{ranking.pokemonApiid}}</p>
     <p>Criteria: {{ranking.criteria}}</p>
 
 </div>
