--- a/FinalProject/ClientApp/src/app/pokemon-details/pokemon-details.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-details/pokemon-details.component.html
@@ -6,28 +6,24 @@
 
 <button (click)="GetPokemonDetails(pokemonID); GetPokemonGenerationID(pokemonID)">Click for Pokemon Details</button>
 
-<div>
-    <p>Pokemon Name: {{currentPokemon.name}}</p>
-    <p>Pokemon Name (getting through array): {{currentPokemon.forms[0].name}}</p>
-    <br>
-
-    <p>Pokemon ID: {{currentPokemon.id}}</p>
-
-    <!-- for loop for types -->
-    <p>Pokemon Type 1: {{currentPokemon.types[0].type.name}}</p>
-    <p *ngIf="currentPokemon.types.length === 2">Pokemon Type 2: {{currentPokemon.types[1].type.name}}</p>
-
-    <br>
-
-    <div *ngIf="currentPokemon.game_indices.length > 0 ">
-        <p >Pokemon Original Game: {{currentPokemon.game_indices[0].version.name}}</p>
-    </div>
-    
-    <p>Pokemon Generation: {{pokemonGenerationID}}</p>
-    
-    <p>Pokemon Image: 
-        <img src={{currentPokemon.sprites.front_default}} alt="">
-    </p>
-
-
-</div>
+<div class="container">
+    <table>
+        <thead>
+            <tr>
+                <th>Pokemon Name: {{currentPokemon.name}}</th>
+                <th>Pokemon Name (getting through array): {{currentPokemon.forms[0].name}}</th>
+            </tr>
+    </thead>
+</table>
+<tbody>
+    <tr>
+        <td>Pokemon ID: {{currentPokemon.id}}</td>
+        <td>Pokemon Type 1: {{currentPokemon.types[0].type.name}}</td>
+        <td>*ngIf="currentPokemon.types.length === 2">Pokemon Type 2: {{currentPokemon.types[1].type.name}}</td>
+        <td>*ngIf="currentPokemon.game_indices.length > 0 "</td>
+        <td>Pokemon Original Game: {{currentPokemon.game_indices[0].version.name}}</td>
+        <td>Pokemon Generation: {{pokemonGenerationID}}</td>
+        <td>Pokemon Image: 
+            <img src={{currentPokemon.sprites.front_default}} alt=""></td>
+    </tr>
+</tbody> 
