--- a/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -46,6 +46,10 @@
             <a class="nav-link text-dark" [routerLink]="['/Login']"
               >Login</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/AddRank']"
+              >Add Rank</a>
+          </li>
         </ul>
       </div>
     </div>
