in process of adding in google ID login; changed dbcontext to azure database

--- a/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -46,7 +46,16 @@
             <a class="nav-link text-dark" [routerLink]="['/Login']"
               >Login</a>
           </li>
+          <li class="nav-item">
+            <asl-google-signin-button *ngIf="!loggedIn" type='icon' size='medium'></asl-google-signin-button>
+            <button class="btn btn-outline-dark" *ngIf="loggedIn"  (click)="signOut()">Sign Out
+            </button>
+            </li>
         </ul>
+
+
+
+
       </div>
     </div>
   </nav>
