--- a/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
@@ -52,18 +52,20 @@
 <h3>Current User: {{currentUser}}</h3>
 <h3>Pokemon rankings filterd by Type: {{typeFilter}}</h3>
 
-<div *ngFor="let ranking of pokemonRankingsByType">
-    <p>Ranking: {{ranking.userRank}}</p>
+<div *ngFor="let ranking of pokemonRankingsByType; index as i;">
+    <p>Rank: {{i + 1}}</p>
+    <p>Overall Ranking: {{ranking.userRank}}</p>
     <p>PokemonID: {{ranking.pokemonApiid}}</p>
     <p>Pokemon Name: {{ranking.name}}</p>
 </div>
 
 <hr>
-
+<!--what does selected="selected mean?
+    what does id="#" mean?-->
 <div>
     <h3>{{currentUser.userName}}: Filter by Generation</h3>
     <select [(ngModel)]="generationFilter" id="#">
-        <option selected="selected" value="1">1</option>
+        <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
@@ -78,8 +80,9 @@
 
     <h3>Pokemon Rankings Filtered By Generation {{generationFilter}}</h3><br><br>
 
-    <div *ngFor="let pokemon of pokemonRankingsByGeneration">
-        <p>Pokemon Rank: {{pokemon.userRank}}</p>
+    <div *ngFor="let pokemon of pokemonRankingsByGeneration; index as i;">
+        <p>Ranking: {{i + 1}}</p>
+        <p>Overall Rank: {{pokemon.userRank}}</p>
         <p>Pokemon ID: {{pokemon.pokemonApiid}}</p>
         <p>Pokemon Name: {{pokemon.name}}</p>
     </div>
