--- a/FinalProject/ClientApp/src/app/pokemon-details/pokemon-details.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-details/pokemon-details.component.html
@@ -3,19 +3,20 @@
 <br><br>
 <button (click)="GetPokemonDetails(pokemonID); GetPokemonGenerationID(pokemonID)">Click for Pokemon Details</button>
 <div *ngIf="currentPokemon.name">
-    <p>Pokemon Name: {{currentPokemon.name}}</p>
+    <p>Name: {{currentPokemon.name}}</p>
     <!-- <p>Pokemon Name (getting through array): {{currentPokemon.forms[0].name}}</p> -->
     <br>
-    <p>Pokemon ID: {{currentPokemon.id}}</p>
+    <p>Pokedex ID: {{currentPokemon.id}}</p>
     <!-- for loop for types -->
-    <p>Pokemon Type 1: {{currentPokemon.types[0].type.name}}</p>
-    <p *ngIf="currentPokemon.types.length === 2">Pokemon Type 2: {{currentPokemon.types[1].type.name}}</p>
+    <p>Type(s): </p>
+    <p>{{currentPokemon.types[0].type.name}}</p>
+    <p *ngIf="currentPokemon.types.length === 2">{{currentPokemon.types[1].type.name}}</p>
     <br>
     <div *ngIf="currentPokemon.game_indices.length > 0 ">
-        <p >Pokemon Original Game: {{currentPokemon.game_indices[0].version.name}}</p>
+        <p >Original Game: {{currentPokemon.game_indices[0].version.name}}</p>
     </div>
-    <p>Pokemon Generation: {{pokemonGenerationID}}</p>
-    <p>Pokemon Image:
+    <p>Generation: {{pokemonGenerationID}}</p>
+    
         <img src={{currentPokemon.sprites.front_default}} alt="">
-    </p>
+    
 </div>
