--- a/FinalProject/ClientApp/src/app/app.component.html
+++ b/FinalProject/ClientApp/src/app/app.component.html
@@ -1,6 +1,27 @@
 <body>
   <app-nav-menu></app-nav-menu>
+  
   <div class="container">
+    <h3 class="d-flex justify-content-center">PokeRank App</h3>
+    <h5 class="d-flex justify-content-center" *ngIf="loggedIn">{{currentUser.firstName}}'s Pokedex</h5>
+    <h5 class="d-flex justify-content-center" [hidden]="loggedIn">Please login to your account to view your rankings</h5>
+
+    <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <button routerLink="Home" class="m-1 btn btn-light btn-outline-primary">Home</button>
+        </li>
+        <li class="nav-item">
+          <button routerLink="Users" class="m-1 btn btn-light btn-outline-primary">Users</button>
+        </li>
+        <li class="nav-item">
+          <button routerLink="PokemonRankings" class="m-1 btn btn-light btn-outline-primary">Pokemon Rankings</button>
+        </li>
+      </ul>
+    </nav>
+
+
+    
     <router-outlet></router-outlet>
   </div>
 </body>
