--- a/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -24,11 +24,15 @@
             class="nav-item"
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+            <a class="nav-link text-dark" [routerLink]="['/Home']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/counter']"
               >Counter</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/Register']"
+              >Register</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/PokemonDetails']"
@@ -47,7 +51,7 @@
               >Login</a>
           </li>
           <li class="nav-item">
-            <asl-google-signin-button *ngIf="!loggedIn" type='icon' size='medium'></asl-google-signin-button>
+            <asl-google-signin-button *ngIf="!loggedIn" type='icon' size='medium' (click)="NavigateToPokemonRankings()"></asl-google-signin-button>
             <button class="btn btn-outline-dark" *ngIf="loggedIn"  (click)="signOut()">Sign Out
             </button>
             </li>
