--- a/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
@@ -1,10 +1,83 @@
-<h1>Pokemon Rankings</h1>
+<h1 *ngIf="loggedIn">{{currentUser.firstName}}'s Pokemon Rankings</h1>
 
-<div *ngFor="let ranking of pokemonRankings">
-    <p>Ranking: {{ranking.userRank}}</p>
-    <p>Pokemon Name: {{ranking.name}}</p>
-    <p>PokemonID: {{ranking.pokemonApiid}}</p>
-</div>
+<!-- Table for user's rankings -->
+<table class="table table-striped" *ngIf="loggedIn">
+    <thead>
+        <tr>
+            <th>Rank:</th>
+            <th>Pokemon Name:</th>
+            <th>Pokemon Image:</th>
+            <th>Options (Filter???)</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr *ngFor="let ranking of pokemonRankingsByCurrentUser; index as i;">
+            <td>{{i + 1}} ({{ranking.userRank}})</td>
+            <td>{{pokemonDetails[i].name}}</td>
+            <td> <img [src]="pokemonDetails[i].sprites.front_default" alt=""></td>
+            <td>
+                <button type="button" class="btn btn-light mr-1">See Full Details</button>
+            </td>
+            <td *ngIf=""><app-pokemon-details></app-pokemon-details></td>
+        </tr>
+    </tbody>
+</table>
+
+<hr>
+<!-- Table for UNRANKED Pokemon -->
+<table class="table table-striped" *ngIf="loggedIn">
+    <thead>
+        <tr>
+            <th>Pokemon Name:</th>
+            <th>Pokedex Entry:</th>
+            <th>Pokemon Image:</th>
+            <th>Type/s</th>
+            <th>Original Game</th>
+            <th>Generation</th>
+            <th>Add to List - we need button</th>
+
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr *ngFor="let pokemon of unrankedPokemonDetailsList; index as i;">
+            <td>{{i + 1}} {{pokemon.name}}</td>
+            <td>{{pokemon.id}}</td>
+            <td> <img [src]="pokemon.sprites.front_default" alt=""></td>
+            <td>
+                <button type="button" class="btn btn-light mr-1">See Full Details</button>
+            </td>
+            <td *ngIf="pokemon.types.length == 1">{{pokemon.types[0].type.name}}</td>
+            <td *ngIf="pokemon.types.length > 1">{{pokemon.types[0].type.name}} {{pokemon.types[1].type.name}}</td>
+            <td *ngIf="pokemon.game_indices.length > 0 ">{{pokemon.game_indices[0].version.name}}</td>
+            <td>{{pokemon}}</td>
+
+            
+            <div *ngIf="pokemonDetails[i].game_indices.length > 0 ">
+                <p >Original Game: {{pokemonDetails[i].game_indices[0].version.name}}</p>
+            </div>
+            <!-- <p>Generation: {{pokemonGenerationID}}</p> -->
+            <p>Pokemon Generation: {{pokemonDetails[i].name}}</p>
+
+
+        </tr>
+    </tbody>
+</table>
+
+
+
+<!-- Why was the line below included? what did this do? -->
+<!-- <div *ngIf="pokemonRankings.length === pokemonDetails.length">
+    <div *ngFor="let ranking of pokemonRankings; index as i;">
+        <p>Ranking: {{i}}({{ranking.userRank}})</p>
+        <p>Pokemon Name: {{pokemonDetails[i].name}}</p>
+        <p>Pokemon Image: {{pokemonDetails[i].name}}</p>
+        <p>Pokemon Generation: {{pokemonDetails[i].name}}</p>
+        <p>PokemonID: {{ranking.pokemonApiid}}</p>
+    </div>
+</div> -->
+
 
 <hr>
 
@@ -16,11 +89,15 @@
 
 <br><br>
 
-<div *ngFor="let ranking of pokemonRankingsByCurrentUser">
-    <p>Ranking: {{ranking.userRank}}</p>
-    <p>PokemonID: {{ranking.pokemonApiid}}</p>
-    <p>Pokemon Name: {{ranking.name}}</p>
+<div *ngIf="pokemonRankings.length === pokemonDetails.length">
+    <div *ngFor="let ranking of pokemonRankingsByCurrentUser; index as i;">
+        <p>Ranking: {{i + 1}} ({{ranking.userRank}})</p>
+        <p>Pokemon Name: {{pokemonDetails[i].name}}</p>
+        <p>Pokemon Image: {{pokemonDetails[i].name}}</p>
+        <p>Pokemon Generation: {{pokemonDetails[i].name}}</p>
+    </div>
 </div>
+
 
 <hr>
 
@@ -52,18 +129,26 @@
 <h3>Current User: {{currentUser}}</h3>
 <h3>Pokemon rankings filterd by Type: {{typeFilter}}</h3>
 
-<div *ngFor="let ranking of pokemonRankingsByType; index as i;">
-    <p>Rank: {{i + 1}}</p>
-    <p>Overall Ranking: {{ranking.userRank}}</p>
-    <p>PokemonID: {{ranking.pokemonApiid}}</p>
-    <p>Pokemon Name: {{ranking.name}}</p>
+<div *ngIf="pokemonRankings.length === pokemonDetails.length">
+    <div *ngFor="let ranking of pokemonRankingsByType; index as i;">
+        <p>Ranking: {{i+1}} ({{ranking.userRank}})</p>
+        <p>PokemonID: {{ranking.pokemonApiid}}</p>
+        <p>Pokemon Name: {{pokemonDetails[i].name}}</p>
+        <p>Pokemon Types: {{pokemonDetails[i].types[0].type.name}}   <span *ngIf="pokemonDetails[i].types.length > 1">{{pokemonDetails[i].types[1].type.name}}</span></p>
+        <div *ngIf="pokemonDetails[i].game_indices.length > 0 ">
+            <p >Original Game: {{pokemonDetails[i].game_indices[0].version.name}}</p>
+        </div>
+        <!-- <p>Generation: {{pokemonGenerationID}}</p> -->
+        <p>Pokemon Generation: {{pokemonDetails[i].name}}</p>
+    </div>
 </div>
+
 
 <hr>
 <!--what does selected="selected mean?
     what does id="#" mean?-->
 <div>
-    <h3>{{currentUser.userName}}: Filter by Generation</h3>
+    <h3>{{currentUser.firstName}}: Filter by Generation</h3>
     <select [(ngModel)]="generationFilter" id="#">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -80,11 +165,10 @@
 
     <h3>Pokemon Rankings Filtered By Generation {{generationFilter}}</h3><br><br>
 
-    <div *ngFor="let pokemon of pokemonRankingsByGeneration; index as i;">
-        <p>Ranking: {{i + 1}}</p>
-        <p>Overall Rank: {{pokemon.userRank}}</p>
-        <p>Pokemon ID: {{pokemon.pokemonApiid}}</p>
-        <p>Pokemon Name: {{pokemon.name}}</p>
+    <div *ngFor="let ranking of pokemonRankingsByGeneration; index as i;">
+        <p>Ranking: {{i + 1}} ({{ranking.userRank}})</p>
+        <p>Overall Rank: {{ranking.userRank}}</p>
+        <p>Pokemon ID: {{ranking.pokemonApiid}}</p>
     </div>
 </div>
 
@@ -92,10 +176,9 @@
 
 <h3>Pokemon Rankings Filtered By Gen {{generationFilter}} and by {{typeFilter}} Type</h3>
 
-<div *ngFor="let pokemon of pokemonRankingsByBoth; index as i;">
-    <p>Ranking: {{i + 1}}</p>
-    <p>Overall Rank: {{pokemon.userRank}}</p>
-    <p>PokeDex ID: {{pokemon.pokemonApiid}}</p>
-    <p>Pokemon Name: {{pokemon.name}}</p>
+<div *ngFor="let ranking of pokemonRankingsByBoth; index as i;">
+    <p>Ranking: {{i + 1}} ({{ranking.userRank}})</p>
+    <p>Overall Rank: {{ranking.userRank}}</p>
+    <p>PokeDex ID: {{ranking.pokemonApiid}}</p>
 </div>
 
