--- a/FinalProject/ClientApp/src/app/delete-rank/delete-rank.component.html
+++ b/FinalProject/ClientApp/src/app/delete-rank/delete-rank.component.html
@@ -9,4 +9,4 @@
     <input type="number" [(ngModel)]="userRank">
 
 </div>
-<button (click)="RemovePokemonRanking(this.userId,userRank,name)">Remove from Ranks</button>
+<!-- <button (click)="RemovePokemonRanking(this.userId,userRank,name)">Remove from Ranks</button> -->
