--- a/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -54,6 +54,10 @@
             <a class="nav-link text-dark" [routerLink]="['/DeleteRank']"
               >Delete Rank</a>
           </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/CommunityRankings']"
+              >Community Ranks</a>
+          </li>
           <li class="nav-item">
             <asl-google-signin-button *ngIf="!loggedIn" type='icon' size='medium'></asl-google-signin-button>
             <button class="btn btn-outline-dark" *ngIf="loggedIn"  (click)="signOut()">Sign Out
