reworkd all pokemon ranking logic; added add/delete pokemon functions

--- a/FinalProject/ClientApp/src/app/add-rank/add-rank.component.html
+++ b/FinalProject/ClientApp/src/app/add-rank/add-rank.component.html
@@ -12,4 +12,4 @@
 </div>
 
 <br>
-<button (click)="AddRanking(userId,userRank, name)">Submit</button>
+<button (click)="AddRanking(userRank, name)">Submit</button>
