--- a/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
@@ -1,5 +1,10 @@
 <h1>Pokemon Rankings</h1>
 
+
+
+    <img src="./pokemon.jpg">
+
+
 <head>
     
 </head>
@@ -15,12 +20,12 @@
         <div class="col" style="border: 1px solid white;">
             <p class="text-primary">PokemonID: {{ranking.pokemonApiid}}</p>
         </div>
+        <div class="col" style="border: 1px solid white;">
+            <p class="text-primary">PokemonID: {{ranking.pokemonApiid}}</p>
+        </div>
     </div>
     </div>
 </body>
-        
-        
-<hr>
 
 <div>
     <label for="userRankings">Click For User Rankings</label>
@@ -171,3 +176,5 @@
     </div>
     </div>
 </body>
+
+
