Josh helped get unrankedPokemonRankings to display

--- a/FinalProject/ClientApp/src/app/app.component.html
+++ b/FinalProject/ClientApp/src/app/app.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <button routerLink="PokemonRankings" class="m-1 btn btn-light btn-outline-primary">Pokemon Rankings</button>
         </li>
+        <li class="nav-item">
+          <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Community Rankings</button>
+        </li>
       </ul>
     </nav>
 
