--- a/FinalProject/ClientApp/src/app/communityrankings/communityrankings.component.html
+++ b/FinalProject/ClientApp/src/app/communityrankings/communityrankings.component.html
@@ -1,24 +1,26 @@
-<h1>Community Pokemon Rankings List:</h1>
-<table class="table table-striped" *ngIf="loggedIn">
+<h1 class="d-flex justify-content-center">Community Pokemon Rankings List:</h1>
+
+<table class="table table-striped">
     <thead>
         <tr>
-            <th>Rank:</th>
+            <th>Rank: (Score)</th>
             <th>Pokemon Name:</th>
             <th>Pokemon Image:</th>
-            <th>Options (Filter???)</th>
+            <th>Types</th>
+            <th>Original Game</th>
+            <th>Generation</th>
         </tr>
     </thead>
 
     <tbody>
         <tr *ngFor="let ranking of communityRankings; index as i;">
-            <td>{{i + 1}} </td>
-            <td>{{communityRankings[i].name}}</td>
+            <td>{{i + 1}} ({{ranking.rank}})</td>
+            <td>{{ranking.name}}</td>
             <!-- <td> <img [src]="this.commRankDetails.sprites.front_default" alt=""></td>
             <td> -->
                 <!-- <button type="button" class="btn btn-light mr-1">See Full Details</button>
             </td> -->
-            <td *ngIf=""><app-pokemon-details></app-pokemon-details></td>
+            <!-- <td *ngIf=""><app-pokemon-details></app-pokemon-details></td> -->
         </tr>
     </tbody>
 </table>
-
